Added send action bar